  - Display tooltip for "Copy to Clipboard" button !5164 (winniehell)
  - Use default cursor for table header of project files !5165 (winniehell)
  - Store when and yaml variables in builds table
  - Display last commit of deleted branch in push events !4699 (winniehell)
  - Escape file extension when parsing search results !5141 (winniehell)
  - Apply the trusted_proxies config to the rack request object for use with rack_attack
  - Upgrade to Rails 4.2.7. !5236
  - Allow to pull code with deploy key from public projects
  - Add Sidekiq queue duration to transaction metrics.
  - Add a new column `artifacts_size` to table `ci_builds` !4964
  - Let Workhorse serve format-patch diffs
  - Display tooltip for mentioned users and groups !5261 (winniehell)
  - Allow build email service to be tested
  - Added day name to contribution calendar tooltips
  - Make images fit to the size of the viewport !4810
  - Fix check for New Branch button on Issue page !4630 (winniehell)
  - Fix MR-auto-close text added to description. !4836
  - Support U2F devices in Firefox. !5177
  - Fix issue, preventing users w/o push access to sort tags !5105 (redetection)
  - Add Spring EmojiOne updates.
  - Added Rake task for tracking deployments !5320
  - Fix fetching LFS objects for private CI projects
  - Add the new 2016 Emoji! Adds 72 new emoji including bacon, facepalm, and selfie. !5237
  - Add syntax for multiline blockquote using `>>>` fence !3954
  - Fix viewing notification settings when a project is pending deletion
  - Updated compare dropdown menus to use GL dropdown
  - Redirects back to issue after clicking login link
  - Eager load award emoji on notes
  - Allow to define manual actions/builds on Pipelines and Environments
  - Fix pagination when sorting by columns with lots of ties (like priority)
  - The Markdown reference parsers now re-use query results to prevent running the same queries multiple times !5020
  - Updated project header design